example/kubernetes/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dabih
  name: dabih-deployment
  namespace: dabih
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dabih
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dabih
    spec:
      containers:
        - image: thespanglab/dabih-api:v1.12.11
          name: dabih
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthy
              port: http
          readinessProbe:
            httpGet:
              path: /healthy
              port: http
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/app/config
              name: config
            - mountPath: /usr/src/app/data
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: dabih-data-pvc
        - name: config
          configMap:
            name: dabih-config
