example/kubernetes/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dabih-client
  name: dabih-client-deployment
  namespace: dabih 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dabih-client
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dabih-client
    spec:
      containers:
      - image: thespanglab/dabih-client:v1.13.1
        name: dabih-client
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/healthy
            port: http
        readinessProbe:
          httpGet:
            path: /api/healthy
            port: http
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
      restartPolicy: Always
