example/kubernetes/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dabih 
  name: dabih
  labels:
    app: dabih
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: dabih
