example/kubernetes/service-client.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dabih 
  name: dabih-client
  labels:
    app: dabih-client
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: dabih-client
