example/kubernetes/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dabih
  name: redis
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    name: redis
  selector:
    app: redis
