example/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dabih-ingress
  namespace: dabih
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 3m
spec:
  rules:
    - host: dabih.spang-lab.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dabih-client
                port:
                  name: http
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: dabih
                port:
                  name: http
  tls:
    - hosts:
        - dabih.spang-lab.de
      secretName: dabih-spang-lab-tls
